# popcorn

./: .gitignore  AllocineBackend  CMakeLists.txt  README.md  levenshtein.hpp  main.cpp  movie.hpp
accuracy_analysis/: index.js  package.json
crawler/: dump_concat.sh  influxdb_create_database.sh  influxdb_drop_database.sh  parser.py  parser.sh  parser_dry_run.sh
init.d/: popcorn_db
stats/: genders.txt  nationalities.txt  status.txt
web/: app.js  chart.js  index.css  index.html  particles.json  stats.html  stats.js
